syntax = "proto3";

import "google/protobuf/empty.proto";

package nova.ratelimit.ratelimiter;

service Ratelimiter {
    rpc SubmitTicket(BucketSubmitTicketRequest) returns (google.protobuf.Empty);
    rpc SubmitHeaders(HeadersSubmitRequest) returns (google.protobuf.Empty);
}

message BucketSubmitTicketRequest {
    string path = 1;
}

message HeadersSubmitRequest {
    map<string, string> headers = 1;
    uint64 precise_time = 2;
    string path = 3;
}